--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -67,14 +67,14 @@ jobs:
       - name: Run cargo-tarpaulin
         uses: actions-rs/tarpaulin@v0.1
         with:
-          version: '0.15.0'
-          args: '-- --test-threads 1'
+          version: '0.16.0'
+#          args: '-- --test-threads 1'
 
       - name: Upload to codecov.io
-        uses: codecov/codecov-action@v1.0.2
+        uses: codecov/codecov-action@v1
         with:
-        #  token: ${{secrets.CODECOV_TOKEN}} # not needed for public repos
-          fail_ci_if_error:     true
+        #   token: ${{secrets.CODECOV_TOKEN}} # not needed for public repos
+          verbose: true
 
       - name: Archive code coverage results
         uses: actions/upload-artifact@v1
