--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -51,6 +51,35 @@ jobs:
       # testing locally
       - run: cargo test --release -- --ignored
 
+  coverage:
+    name:                       coverage
+    runs-on:                    ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Run cargo-tarpaulin
+        uses: actions-rs/tarpaulin@v0.1
+        with:
+          version: '0.16.0'
+
+      - name: Upload to codecov.io
+        uses: codecov/codecov-action@v1
+        with:
+          verbose: false
+
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v1
+        with:
+          name: code-coverage-report
+          path: cobertura.xml
+
   cargo-deny:
     runs-on: ubuntu-latest
     strategy:
